--- a/lab01/exercise02/style.css
+++ b/lab01/exercise02/style.css
@@ -14,11 +14,38 @@ Feel free to borrow from Exercise 1.
 
 /* Tablet Media Query */
 @media only screen and (max-width: 1000px) {
-
+    main{
+        flex-wrap: wrap;
+    }
+    section{
+        width: calc(50% - 20px);
+    }
 }
 
 /* Mobile Phone Media Query */
 @media only screen and (max-width: 600px) {
+    main{
+        flex-wrap: wrap;
+    }
+    section{
+        width: 100%;
+    }
+}
 
-    
+main{
+    display: flex;
+}
+section{
+    width: 350px;
+    margin: 10px;
+    border: solid 1px #ccc;
+    padding-bottom: 20px;
+}
+img{
+    width: 100%;
+}
+
+h2, p, button{
+    margin-left: 20px;
+    margin-right: 20px;
 }
