--- a/lab01/exercise02/style.css
+++ b/lab01/exercise02/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 body * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Roboto Condensed';
 }
 
 /*
